--- a/AppData/Local/coc/extensions/package.json
+++ b/AppData/Local/coc/extensions/package.json
@@ -1,19 +1,33 @@
 {
   "dependencies": {
-    "coc-css": ">=1.2.4",
+    "coc-actions": ">=1.4.2",
+    "coc-bookmark": ">=1.2.6",
+    "coc-css": ">=1.2.6",
+    "coc-cssmodules": ">=1.0.0",
     "coc-emmet": ">=1.1.6",
-    "coc-git": ">=1.8.1",
-    "coc-highlight": ">=1.2.5",
-    "coc-html": ">=1.2.4",
-    "coc-json": ">=1.2.6",
-    "coc-lists": ">=1.3.10",
-    "coc-marketplace": ">=1.7.0",
+    "coc-eslint": ">=1.3.2",
+    "coc-explorer": ">=0.9.1",
+    "coc-git": ">=2.0.2",
+    "coc-highlight": ">=1.2.6",
+    "coc-html": ">=1.3.1",
+    "coc-import-cost": ">=1.0.1",
+    "coc-jest": ">=1.1.2",
+    "coc-json": ">=1.3.2",
+    "coc-lists": ">=1.3.11",
+    "coc-marketplace": ">=1.8.0",
+    "coc-omni": ">=1.2.4",
     "coc-pairs": ">=1.2.21",
-    "coc-prettier": ">=1.1.17",
+    "coc-powershell": ">=0.1.4",
+    "coc-prettier": ">=1.1.18",
     "coc-smartf": ">=1.1.10",
-    "coc-snippets": ">=2.1.28",
-    "coc-tsserver": ">=1.5.3",
+    "coc-snippets": ">=2.2.5",
+    "coc-styled-components": ">=0.3.0",
+    "coc-stylelint": ">=1.2.0",
+    "coc-syntax": ">=1.2.4",
+    "coc-tslint-plugin": ">=1.1.1",
+    "coc-tsserver": ">=1.6.0",
     "coc-vimlsp": ">=0.10.1",
-    "coc-yank": ">=1.1.4"
+    "coc-yank": ">=1.1.8"
   }
 }
+
