--- a/AppData/Local/coc/extensions/package.json
+++ b/AppData/Local/coc/extensions/package.json
@@ -1,33 +1,33 @@
 {
   "dependencies": {
-    "coc-actions": ">=1.4.2",
+    "coc-actions": ">=1.5.0",
     "coc-bookmark": ">=1.2.6",
     "coc-css": ">=1.2.6",
-    "coc-cssmodules": ">=1.0.0",
+    "coc-cssmodules": ">=1.1.1",
     "coc-emmet": ">=1.1.6",
     "coc-eslint": ">=1.3.2",
-    "coc-explorer": ">=0.9.1",
-    "coc-git": ">=2.0.2",
-    "coc-highlight": ">=1.2.6",
-    "coc-html": ">=1.3.1",
+    "coc-explorer": ">=0.13.4",
+    "coc-fzf-preview": ">=0.4.27",
+    "coc-git": ">=2.0.5",
+    "coc-highlight": ">=1.2.7",
+    "coc-html": ">=1.3.2",
     "coc-import-cost": ">=1.0.1",
-    "coc-jest": ">=1.1.2",
+    "coc-jest": ">=1.1.3",
     "coc-json": ">=1.3.2",
-    "coc-lists": ">=1.3.11",
+    "coc-lists": ">=1.3.16",
     "coc-marketplace": ">=1.8.0",
     "coc-omni": ">=1.2.4",
     "coc-pairs": ">=1.2.21",
     "coc-powershell": ">=0.1.4",
-    "coc-prettier": ">=1.1.18",
-    "coc-smartf": ">=1.1.10",
-    "coc-snippets": ">=2.2.5",
-    "coc-styled-components": ">=0.3.0",
+    "coc-prettier": ">=1.1.20",
+    "coc-smartf": ">=1.1.11",
+    "coc-snippets": ">=2.3.1",
+    "coc-styled-components": ">=0.4.0",
     "coc-stylelint": ">=1.2.0",
     "coc-syntax": ">=1.2.4",
     "coc-tslint-plugin": ">=1.1.1",
-    "coc-tsserver": ">=1.6.0",
-    "coc-vimlsp": ">=0.10.1",
-    "coc-yank": ">=1.1.8"
+    "coc-tsserver": ">=1.6.6",
+    "coc-vimlsp": ">=0.11.0",
+    "coc-yank": ">=1.1.11"
   }
 }
-
